# Changelog

## Version 4.2.0

* Adding ability to extract HDR10+ metadata
* Adding #178 selector for number of autocrop positions throughout video (thanks to bmcassagne)
* Adding Windows 10 notification for queue complete success
* Fixing #187 cleaning up partial download of FFmpeg (thanks to Todd Wilkinson)

## Version 4.1.2

* Fixing #180 Minor UI glitch, custom bitrate retains "k" when edited from queue (thanks to Etz)
* Fixing custom QP crashes FastFlix (thanks to J-mas)
* Fixing adding a dot for microseconds in time fields would crash FastFlix (thanks to remlap)
* Fixing Chinese translations (thanks to leonardyan)

## Version 4.1.1

* Fixing #156 Copy was broken due to copy settings being renamed due to library update (thanks to leonardyan)
* Fixing #172 FastFlix could not set profile setting copy (thanks to Etz)
* Fixing calling delete on a profile without a source video could crash FastFlix

## Version 4.1.0

* Adding #118 #126 advanced panel with FFmpeg filters (thanks to Marco Ravich and remlap)
* Adding #114 info panel that shows source details (thanks to leonardyan)
* Adding #117 support for text based burn in subtitles
* Adding #152 option to switch back to old bubbly buttons (thanks to GitKike98)
* Adding logging level selector in settings for GUI
* Adding button to extract text based subtitles
* Adding dual pass option for ffmpeg options (thanks to Catatau)
* Adding #163 elapsed time in encoding panel (thanks to Benedicte Emilie Brækken)
* Adding super secret DEVMODE environment variable
* Adding #168 Allow decimal CRF values as Custom values (thanks to Etz)
* Changing all builds to use Python 3.8, removing idea of "legacy" windows until later time
* Fixing #156 Copy was broken due to ffmpeg extras not being passed (thanks to leonardyan)
* Fixing #158 Translation and icon of tab name "Quality" lost when output codec switched (thanks to leonardyan)
* Fixing #120 Custom bitrate forgets to add a "k" (thanks to seighail3)